--- a/ADnD 2nd Edition/add-2e-MC.css
+++ b/ADnD 2nd Edition/add-2e-MC.css
@@ -1,19 +1,6 @@
-/*  
-- Works best on Chrome.
-- Made by John Jones /u/Gazook89 - [Github](https://github.com/Gazook89/Homebrewery-Snippets/blob/main/aDnD-2e-MM.css) - 2/6/2021
-- Support/Appreciation can be given via [Ko-fi](https://ko-fi.com/johnj)
-- The real font for titles and headers is Friz Quadrata, but it is pricey so a substitution has been made.
-- I recommend [TablesGenerator.com](https://www.tablesgenerator.com/markdown_tables#) for making your tables.
-- Help can be found on [r/homebrewery](https://www.reddit.com/r/homebrewery)
-- Template/Theme free for personal and  commercial use, with attribution for commercial use.  No guarantees. 
-*/
-
-
-
-
 /* The real font is Friz Quadrata Bold, but it is pricey and I couldn't find an open source version of it.  Below is a compromise font */
   
-  @import url('https://raw.githack.com/Udnuttin/Homebrewing/main/AD&D%202nd%20Edition/Quad%20Fritz%20Bold.woff2);
+  @import url('https://fonts.googleapis.com/css2?family=Expletus+Sans:ital,wght@0,700;1,700&display=swap');
   
 /*   Below are the ROOT variables that can be included in the Homebrewery editor to make some simple changes. 
 Note, there are nested css comments here, and if included in the brew, the space between / and * needs to be removed.
@@ -116,7 +103,7 @@ Note, there are nested css comments here, and if included in the brew, the space
   .phb h1 {
   	color:var(--main-color);
   	border-bottom:3px solid #212121;
-  	font-family:'Quad Fritz Bold';
+  	font-family:'Expletus Sans';
   	font-size:30px;
   	padding:3px;
   	margin: 0px 0px 35px 5px;
