--- a/ADnD 2nd Edition/add-2e-MC.css
+++ b/ADnD 2nd Edition/add-2e-MC.css
@@ -71,20 +71,20 @@ Note, there are nested css comments here, and if included in the brew, the space
 	
   }
   
-  /* COVER PAGE  
+   /* COVER PAGE  */
   
   .phb .cover ~ h1 {
   	border:none;
   	text-align:center;
   	font-size:40px;
-  	color:white;
+  	color:green;
   	width:70%;
   	margin:auto auto;
   	background:var(--main-color);
-  	border-radius:25px;
+  	border-radius:5px;
   	border:4px double white;
   }
-  */
+
 
   
   /* TEXT */
