--- a/ADnD 2nd Edition/add-2e-MC.css
+++ b/ADnD 2nd Edition/add-2e-MC.css
@@ -76,17 +76,15 @@ Note, there are nested css comments here, and if included in the brew, the space
   .phb .cover ~ h1 {
   	border:none;
   	text-align:center;
-  	font-size:20px;
-  	color:green;
+  	font-size:42px;
+  	color:white;
   	width:70%;
   	margin:auto auto;
   	background:var(--main-color);
-  	border-radius:5px;
-  	border:4px double white;
+  	border-radius:27px;
+  	border:6px double white;
   }
 
-
-  
   /* TEXT */
   
   .phb p {
