--- a/ADnD 2nd Edition/add-2e-MC.css
+++ b/ADnD 2nd Edition/add-2e-MC.css
@@ -78,7 +78,7 @@ Note, there are nested css comments here, and if included in the brew, the space
   	text-align:center;
   	font-size:42px;
   	color:white;
-  	width:20%;
+  	width:auto;
   	margin:auto auto;
   	background:var(--main-color);
   	border-radius:27px;
