--- a/ADnD 2nd Edition/add-2e-MC.css
+++ b/ADnD 2nd Edition/add-2e-MC.css
@@ -83,6 +83,7 @@ Note, there are nested css comments here, and if included in the brew, the space
   	background:var(--main-color);
   	border-radius:27px;
   	border:9px double white;
+	text-shadow: 3px 3px 3px;
   }
 
   /* TEXT */
