--- a/ADnD 2nd Edition/add-2e-MC.css
+++ b/ADnD 2nd Edition/add-2e-MC.css
@@ -80,6 +80,7 @@ Note, there are nested css comments here, and if included in the brew, the space
   	color:white;
   	width:75%;
   	margin:auto auto;
+	border-bottom:none;
 	text-shadow: 0 0 27px var(--main-color);
   }
 
