Font and Style Update

--- a/ADnD 2nd Edition/add-2e-MC.css
+++ b/ADnD 2nd Edition/add-2e-MC.css
@@ -144,8 +144,9 @@ Note, there are nested css comments here, and if included in the brew, the space
   }
   
   .main-image  .frame {
-  	position:relative;
+  	position:absolute;
   	overflow:hidden;
+	top:50px;
 	float:right;
   	width:100%;
   	height:300px;
