--- a/ADnD 2nd Edition/add-2e-MC.css
+++ b/ADnD 2nd Edition/add-2e-MC.css
@@ -146,7 +146,8 @@ Note, there are nested css comments here, and if included in the brew, the space
   .main-image  .frame {
   	position:absolute;
   	overflow:hidden;
-	top:50px;
+	right:0;
+	top:0;
 	float:right;
   	width:100%;
   	height:300px;
