--- a/ADnD 2nd Edition/add-2e-MC.css
+++ b/ADnD 2nd Edition/add-2e-MC.css
@@ -208,7 +208,7 @@ Note, there are nested css comments here, and if included in the brew, the space
   	content:'';
   	display:table-caption;
   	height:1px;
-  	background:#212121;
+  	background:#22ac93;
   	margin-bottom:2px;
   	margin-left:5px;
   	margin-right:0px;
