--- a/ADnD 2nd Edition/add-2e-MC.css
+++ b/ADnD 2nd Edition/add-2e-MC.css
@@ -138,8 +138,6 @@ Note, there are nested css comments here, and if included in the brew, the space
   
   .sticky:before {
   	position:absolute;
-	right:0;
-	top:0;
 	content:'';
   	display:block;
   	float:right;
@@ -222,7 +220,7 @@ Note, there are nested css comments here, and if included in the brew, the space
   	background:none;
   }
   
-  .phb .stats table tbody tr:nth-child(3):nth-child(4):nth-child(5) {
+  .phb .stats table tbody tr:nth-child(n+1):nth-child(-n+4) {
   	background:var(--table-row-color);
   }
   
