--- a/ADnD 2nd Edition/add-2e-MC.css
+++ b/ADnD 2nd Edition/add-2e-MC.css
@@ -35,18 +35,18 @@ Note, there are nested css comments here, and if included in the brew, the space
 
 
   
-  .phb {
+  .page {
   	background:#fdfdfd;
   	column-gap:25px;
   	color:#212121;
   	padding:20px 30px 50px 70px;
   }
   
-  .phb:nth-of-type(2n) {
+  .page:nth-of-type(2n) {
   	padding:20px 70px 50px 30px;
   }
   
-  .phb:after {
+  .page:after {
   	background-image:url('https://imgur.com/ZRRHwDN.png');
   	left:15px;
   	right:unset;
@@ -59,7 +59,7 @@ Note, there are nested css comments here, and if included in the brew, the space
   	transform:scaleX(1);
   }
   
-  .phb:nth-of-type(2n):after {
+  .page:nth-of-type(2n):after {
   	left:unset;
   	right:20px;
   	transform:scaleX(-1);
@@ -73,7 +73,7 @@ Note, there are nested css comments here, and if included in the brew, the space
   
    /* COVER PAGE  */
   
-  .phb .cover ~ h1 {
+  .page .cover ~ h1 {
 	border:none;
   	text-align:center;
   	font-size:39px;
@@ -86,7 +86,7 @@ Note, there are nested css comments here, and if included in the brew, the space
 
   /* TEXT */
   
-  .phb p {
+  .page p {
   	text-align:justify;
   	-webkit-column-break-inside:unset;
   	break-inside:unset;
@@ -94,17 +94,17 @@ Note, there are nested css comments here, and if included in the brew, the space
   	padding-bottom:.7em;
   }
   
-  .phb p strong:first-child {
+  .page p strong:first-child {
   	color:var(--main-color);
   	margin-right:.8em;
   }
   
   
-  .phb h1 + p:first-letter {
+  .page h1 + p:first-letter {
   	all:unset;
   }
   
-  .phb h1 {
+  .page h1 {
   	color:var(--main-color);
   	border-bottom:3px solid #212121;
   	font-family:'Quad-Fritz-Bold';
@@ -114,7 +114,7 @@ Note, there are nested css comments here, and if included in the brew, the space
   	
   }
   
-  .phb h1 + hr {
+  .page h1 + hr {
   	visibility:visible;
   	column-span:all;
   	color:var(--main-color);
@@ -124,7 +124,7 @@ Note, there are nested css comments here, and if included in the brew, the space
   	margin-top:-20px;
   }
   
-  .phb h2 {
+  .page h2 {
   	font-size:1em;
   	font-family:'booksanity';
   	color:var(--main-color);
@@ -163,35 +163,35 @@ Note, there are nested css comments here, and if included in the brew, the space
   
   /* TABLES */
   
-  .phb table {
+  .page table {
   	font-family:'booksanity';
   	font-size:1em;
   }
  
-  .phb  table tbody tr:nth-child(odd) {
+  .page  table tbody tr:nth-child(odd) {
   	background:none;
   
   }
   
-  .phb table tbody td {
+  .page table tbody td {
   	width:500px;
   }
   
-  .phb table tbody tr:first-child td {
+  .page table tbody tr:first-child td {
   	padding-top:0px;
   }
   
-  .phb table thead th {
+  .page table thead th {
   	padding:12px 5px 2px 5px;
   	text-transform:capitalize;
   }
   
-  .phb table thead th:empty {
+  .page table thead th:empty {
   	visiblity:hidden;
   	padding:2px 5px
   }
   
-  .phb table tbody tr td {
+  .page table tbody tr td {
 	padding: 1px 5px;
   }
  
@@ -199,10 +199,10 @@ Note, there are nested css comments here, and if included in the brew, the space
   /* Stats Table */
   
 	
-  .phb .stats table {
+  .page .stats table {
   }
   
-  .phb .stats table + table:before {
+  .page .stats table + table:before {
   	content:'';
   	display:table-caption;
   	height:1px;
@@ -212,36 +212,36 @@ Note, there are nested css comments here, and if included in the brew, the space
   	margin-right:0px;
   }
   
-  .phb .stats table tbody tr:first-child td {
+  .page .stats table tbody tr:first-child td {
 	padding-top: 6px;
   }
   
-  .phb .stats table tbody tr:nth-child(2n+1) {
+  .page .stats table tbody tr:nth-child(2n+1) {
   	background:none;
   }
   
-  .phb .stats table tbody tr:nth-child(n+1):nth-child(-n+4) {
+  .page .stats table tbody tr:nth-child(n+1):nth-child(-n+4) {
   	background:var(--table-row-color);
   }
   
-  .phb .stats table:nth-of-type(2) tbody tr:nth-child(n+1):nth-child(-n+7) {
+  .page .stats table:nth-of-type(2) tbody tr:nth-child(n+1):nth-child(-n+7) {
   	background:var(--table-row-color);
   }
   
-  .phb .stats table tbody tr td:nth-of-type(1) {
+  .page .stats table tbody tr td:nth-of-type(1) {
   	text-transform:uppercase;
   	font-weight:bold;
   	width:240px;
   }
   
-  .phb .stats table tbody td:nth-of-type(1):after {
+  .page .stats table tbody td:nth-of-type(1):after {
   	content:':'
   }
   
   
   /* Roll Tables */
   
-  .phb .rolltable1 {
+  .page .rolltable1 {
   	border-top:1px solid #212121;
   	border-bottom:1px solid #212121;
   	margin:2px 5px;
@@ -249,12 +249,12 @@ Note, there are nested css comments here, and if included in the brew, the space
   	flex:1 1;
   }
   
-  .phb .rolltable1 h2 + table thead th {
+  .page .rolltable1 h2 + table thead th {
   	margin-top:0;
   	padding-top:0;
   }
   
-  .phb .rolltable1 h2  {
+  .page .rolltable1 h2  {
   	line-height:1.5em;
  
   }
@@ -263,27 +263,27 @@ Note, there are nested css comments here, and if included in the brew, the space
   
   /* Table Variations  */
   
-  .phb .alternating1 table tbody tr:nth-child(2n+1) {
+  .page .alternating1 table tbody tr:nth-child(2n+1) {
   	background-color:var(--table-row-color);
   }
   
-  .phb .alternating2 table tbody tr:nth-child(4n+1),.phb .alternating2 table tbody tr:nth-child(4n+2) {
+  .page .alternating2 table tbody tr:nth-child(4n+1),.page .alternating2 table tbody tr:nth-child(4n+2) {
   	background-color:var(--table-row-color);
   }
   
-  .phb .alternating3 table tbody tr:nth-child(6n+1),.phb .alternating3 table tbody tr:nth-child(6n+2),.phb .alternating3 table tbody tr:nth-child(6n+3) {
+  .page .alternating3 table tbody tr:nth-child(6n+1),.page .alternating3 table tbody tr:nth-child(6n+2),.page .alternating3 table tbody tr:nth-child(6n+3) {
   	background-color:var(--table-row-color);
   }
   
-  .phb .alternating4 table tbody tr:nth-child(8n+1),.phb .alternating4 table tbody tr:nth-child(8n+2),.phb .alternating4 table tbody tr:nth-child(8n+3),.phb .alternating4 table tbody tr:nth-child(8n+4) {
+  .page .alternating4 table tbody tr:nth-child(8n+1),.page .alternating4 table tbody tr:nth-child(8n+2),.page .alternating4 table tbody tr:nth-child(8n+3),.page .alternating4 table tbody tr:nth-child(8n+4) {
   	background-color:var(--table-row-color);
   }
   
-  .phb .alternating5 table tbody tr:nth-child(10n+1),.phb .alternating5 table tbody tr:nth-child(10n+2),.phb .alternating5 table tbody tr:nth-child(10n+3),.phb .alternating5 table tbody tr:nth-child(10n+4),.phb .alternating5 table tbody tr:nth-child(10n+5) {
+  .page .alternating5 table tbody tr:nth-child(10n+1),.page .alternating5 table tbody tr:nth-child(10n+2),.page .alternating5 table tbody tr:nth-child(10n+3),.page .alternating5 table tbody tr:nth-child(10n+4),.page .alternating5 table tbody tr:nth-child(10n+5) {
   	background-color:var(--table-row-color);
   }
   
-  .phb .alternating6 table tbody tr:nth-child(12n+1),.phb .alternating6 table tbody tr:nth-child(12n+2),.phb .alternating6 table tbody tr:nth-child(12n+3),.phb .alternating6 table tbody tr:nth-child(12n+4),.phb .alternating6 table tbody tr:nth-child(12n+5),.phb .alternating6 table tbody tr:nth-child(12n+6) {
+  .page .alternating6 table tbody tr:nth-child(12n+1),.page .alternating6 table tbody tr:nth-child(12n+2),.page .alternating6 table tbody tr:nth-child(12n+3),.page .alternating6 table tbody tr:nth-child(12n+4),.page .alternating6 table tbody tr:nth-child(12n+5),.page .alternating6 table tbody tr:nth-child(12n+6) {
   	background-color:var(--table-row-color);
   }
  
